update to dsf 2.0.0